[tool.poetry]
name = "harvest"
version = "0.1.0"
description = ""
authors = ["Jack Kuo <chunchiehdev@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.10"
selenium = "^4.26.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
webdriver-manager = "^4.0.2"
bs4 = "^0.0.2"
sqlalchemy = "^2.0.36"
watchdog = "^6.0.0"
pillow = "^11.0.0"
pytesseract = "^0.3.13"
tqdm = "^4.66.5"
pdf2image = "^1.17.0"
alembic = "^1.14.0"
fastapi = {extras = ["all"], version = "^0.115.5"}
uvicorn = "^0.32.1"
python-multipart = "^0.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
